--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <form class = "login-form">
     <div>
         <label for="email-login">email:</label>
-        <input type="type" id="email=login" />
+        <input type="type" id="email-login" />
     </div>
     <div>
         <label for="password-login">password:</label>
