--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,8 @@
+<div class="login">
 <form class = "login-form">
+    <h3>Existing User</h3>
     <div>
+        
         <label for="email-login">email:</label>
         <input type="type" id="email-login" />
     </div>
@@ -13,6 +16,7 @@
 </form>
 
 <form class = "signup-form">
+    <h3>New User</h3>
     <div>
         <label for="username-signup">username:</label>
         <input type="text" id="username-signup" />
@@ -29,5 +33,6 @@
         <button type="submit">signup</button>
     </div>
 </form>
+</div>
 
 <script src="/javascript/login.js"></script>
