--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
             </h1>
             <nav>
                 {{#if loggedIn}}
-                <a href="/homepage">Home</a>
+                <a href="/">Home</a>
                 <a href="/dashboard">Dashboard</a>
                 <button id="logout" class="btn-no-style">Logout</button>
                 {{else}}
@@ -27,9 +27,9 @@
         <main>
             {{{ body }}}
         </main>
-        <footer>
+        {{!-- <footer>
             FOOTER
-        </footer>
+        </footer> --}}
     </div>
     {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
