--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,6 +1,8 @@
 <article class="post">
     <div class="title">
-        <a href="{{post_url}}" target="_blank">{{title}}</a>
-        <span>({{format_url post_url}})</span>
+        {{title}} {{user.username}}
+        <div>
+        <span>({{post_body}})</span>
+        </div>
     </div>
 </article>
