--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,6 +1,8 @@
 <article class="post">
-    <div class="title">
-        {{title}} {{user.username}}
+    <div>
+        <div class="title">
+        <span>{{title}}</span> <span>{{user.username}}</span>
+        </div>
         <div>
         <span>({{post_body}})</span>
         </div>
