--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,18 +7,18 @@
       <input type="text" id="post-title" name="post-title" />
     </div>
     <div>
-      <label for="post-url">Link</label>
-      <input id="post-url" name="post-url" />
+      <label for="post_body">Body</label>
+      <input id="post_body" name="post_body" />
     </div>
     <button type="submit" class="btn">Create</button>
   </form>
 </section>
 
-{{#if post.length}}
+{{#if posts.length}}
 <section>
   <h2>Your Posts</h2>
   <ol>
-    {{#each post as |post|}}
+    {{#each posts as |post|}}
     <li>
       {{> post-info post}}
       <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
