updated put post

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
     </div>
     <div>
       <label for="post_body">Body</label>
-      <input id="post_body" name="post_body" />
+      <textarea id="post_body" name="post_body"></textarea>
     </div>
     <button type="submit" class="btn">Create</button>
   </form>
