--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,8 +71,9 @@ header button {
     text-decoration: underline;
 }
 
-input {
-    border-radius: 10%;
+input, textarea {
+    border-radius: 10px;
+    border: black 1px solid;
 }
 
 .signup-form {
@@ -96,16 +97,20 @@ input {
     font-weight: bold;
 }
 
-div .title {
+div .title
+div .edit-title {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+}
+
+div .title{
     background-color: var(--primary);
     color: var(--textcolor);
-
 }
+
 
 ol li {
     list-style-type: none;
@@ -119,4 +124,13 @@ ol li {
 
 li {
     width: 100%;
+}
+
+#post-title {
+    height: 30px;
+    width: 400px;
+}
+#post_body {
+    width: 400px;
+    height: 150px;
 }
