--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,11 +3,11 @@
 
   <form class="new-post-form">
     <div>
-      <label for="post-title">Title</label>
+      <label for="post-title">Title:</label>
       <input type="text" id="post-title" name="post-title" />
     </div>
     <div>
-      <label for="post_body">Body</label>
+      <label for="post_body">Body:</label>
       <textarea id="post_body" name="post_body"></textarea>
     </div>
     <button type="submit" class="btn">Create</button>
