--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -8,7 +8,7 @@
             <div class="edit-title">
             <input name="post-title" id="post-title" type="text" value ="{{post.title}}" />
             </div>
-            <textarea id="post_body" name="post_body" >'{{post.post_body}}'</textarea>
+            <textarea id="post_body" name="post_body" >{{post.post_body}}</textarea>
         </div>
         <button type="submit" class="btn">Save</button>
         <button  type="button" class="deletePost">Delete</button>
@@ -16,3 +16,4 @@
 </article>
 
 <script src="/javascript/edit-post.js"></script>
+<script src="/javascript/delete-post.js"></script>
