--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,7 @@
 <article class="post">
     <div>
         <div class="title">
-        <span>{{title}}</span> <span>{{user.username}}</span>
+        <span>{{title}}</span> <span><a>created by:</a>{{user.username}}</span>
         </div>
         <div>
         <span>({{post_body}})</span>
