--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,7 @@ header {
 }
 body {
     background-color: var(--secondary);
+    
 }
 
 header a {
@@ -120,12 +121,13 @@ div .title {
 
 ol li {
     list-style-type: none;
-    margin: 10px;
+    margin-top: 10px;
+    margin-left: -25px;
     padding: 5px;
     display: flex;
     /* flex-direction: row; */
     border: 2px black solid;
-    width: 70%;
+    width: 80%;
     justify-content: space-between;
 }
 
@@ -160,4 +162,8 @@ label {
 
 .new-post-form div {
     margin: 10px;
+}
+
+section {
+    margin-left: 30px;
 }
