removed '()' around post body

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -4,7 +4,7 @@
         <span>{{title}}</span> <span><a>created by:</a>{{user.username}}</span>
         </div>
         <div>
-        <span>({{post_body}})</span>
+        <span>{{post_body}}</span>
         </div>
     </div>
 </article>
